--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,7 @@ header {
 }
 
 main {
+  padding: 30px 0;
 }
 
 a {
@@ -49,4 +50,26 @@ footer {
   margin-left: 5px;
   border-radius: 6px;
   color: white;
+}
+
+.weather-app-data {
+  display: flex;
+  justify-content: space-between;
+}
+
+.weather-app-city {
+  margin: 0;
+  font-size: 38px;
+  line-height: 48px;
+}
+
+.weather-app-details {
+  font-size: 16px;
+  color: rgba(39, 33, 66, 0.4);
+  line-height: 24px;
+  font-weight: 500px;
+}
+
+.weather-app-details strong {
+  color: #f65282;
 }
