--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@ main {
 }
 
 a {
-  color: #885df1;
+  color: #0ca4ca;
 }
 
 footer {
@@ -47,7 +47,7 @@ footer {
 }
 
 .search-form-button {
-  background-color: #885df1;
+  background-color: #0ca4ca;
   padding: 15px 30px;
   border: none;
   font-size: 16px;
