--- a/src/style.css
+++ b/src/style.css
@@ -35,10 +35,11 @@ a {
 }
 
 .weather-forecast-icon {
-  font-size: 38px;
-  text-align: center;
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
 }
-
 .weather-forecast-temperatures {
   text-align: center;
   color: #f65282;
